--- a/mcp/package.json
+++ b/mcp/package.json
@@ -23,11 +23,9 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.8.0",
-    "@toon-format/toon": "^3.0.0",
-    "commander": "^13.1.0",
+    "@toon-format/toon": "^2.1.0",
     "ws": "^8.18.1",
-    "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.3"
+    "zod": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
