--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
@@ -13,10 +17,13 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "~*": ["./*"]
+      "~*": [
+        "./*"
+      ]
     }
   },
   "include": [
+    ".plasmo/index.d.ts",
     "./**/*.ts",
     "./**/*.tsx"
   ],
